Added Vagrant files for x86

--- a/_posts/17S/2017-03-01-x86-assembly.md
+++ b/_posts/17S/2017-03-01-x86-assembly.md
@@ -10,3 +10,14 @@ status: publish
 We will be having our sixth meeting in ECSS 2.311, March 1st, 2017 at
 7:00pm. We will be covering x86 assembly using GDB in a multi-part reverse
 engineering series.
+
+To prepare for this meeting, please come with the following:
+
+<!--more-->
+
+Either:
+
+* A Linux VM prepared with gdb, gcc, and the files here: <https://csg.utdallas.edu/assets/x86intro/x86code.zip>
+* Virtualbox, Vagrant, and our Vagrantfile: <https://csg.utdallas.edu/assets/x86intro/Vagrantfile>
+
+To use Vagrant, load command prompt/terminal in the directory that contains the Vagrant file and run `vagrant up`
