Added Vagrant login

--- a/_posts/17S/2017-03-01-x86-assembly.md
+++ b/_posts/17S/2017-03-01-x86-assembly.md
@@ -21,3 +21,4 @@ Either:
 * Virtualbox, Vagrant, and our Vagrantfile: <https://csg.utdallas.edu/assets/x86intro/Vagrantfile>
 
 To use Vagrant, load command prompt/terminal in the directory that contains the Vagrant file and run `vagrant up`
+The password to login is username: csg and password: csg
