--- a/_posts/17S/2017-03-01-x86-assembly.md
+++ b/_posts/17S/2017-03-01-x86-assembly.md
@@ -18,7 +18,7 @@ To prepare for this meeting, please come with the following:
 Either:
 
 * A Linux VM prepared with gdb, gcc, and the files here: <https://csg.utdallas.edu/assets/x86intro/x86code.zip>
-* Virtualbox, Vagrant, and our Vagrantfile: Link down for maintenence
+* Virtualbox, Vagrant, and our Vagrantfile: <https://csg.utdallas.edu/assets/x86intro/Vagrantfile>
 
 To use Vagrant, load command prompt/terminal in the directory that contains the Vagrant file and run `vagrant up`
 The password to login is username: csg and password: csg
