--- a/_posts/17S/2017-03-01-x86-assembly.md
+++ b/_posts/17S/2017-03-01-x86-assembly.md
@@ -11,6 +11,8 @@ We will be having our sixth meeting in ECSS 2.311, March 1st, 2017 at
 7:00pm. We will be covering x86 assembly using GDB in a multi-part reverse
 engineering series.
 
+Slides: <https://docs.google.com/presentation/d/19iWfcTWlaaiXvCSD6E0tHsLz2ytv9GCxF-a5KMXOPOk/edit?usp=sharing>
+
 To prepare for this meeting, please come with the following:
 
 <!--more-->
