Add slides to recon

--- a/_posts/17F/2017-10-04-recon.md
+++ b/_posts/17F/2017-10-04-recon.md
@@ -6,4 +6,4 @@ date: 2017-10-02 07:00:00.000000000 -05:00
 
 Join CSG, October 4th Wednesday at 7:00 PM in JO 3.516, as we demonstrate how to preform one of the most important steps of penetration testing, RECON! 
 
-
+Slides: <https://csg.utdallas.edu/assets/slides/recon.pdf>
